[gd_scene format=3 uid="uid://dj5jiwqy6m03p"]

[ext_resource type="Script" uid="uid://bsag455k1bfkr" path="res://scripts/canvas_layer_ui.gd" id="1_3bfwg"]
[ext_resource type="Texture2D" uid="uid://3p61d2seslv1" path="res://assets/background/back.png" id="1_qxxiy"]

[node name="CanvasLayerUI" type="CanvasLayer" unique_id=347334777]
script = ExtResource("1_3bfwg")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1668653551]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 13.0
offset_right = -17.0
offset_bottom = 77.0
grow_horizontal = 0
texture = ExtResource("1_qxxiy")

[node name="LabelTimer" type="Label" parent="TextureRect" unique_id=1961970025]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -21.0
offset_right = 25.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "60"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="." unique_id=2108754399]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -181.0
offset_top = 81.0
offset_right = -16.0
offset_bottom = 145.0
grow_horizontal = 0
scale = Vector2(0.9964879, 0.65625)
texture = ExtResource("1_qxxiy")

[node name="LabelLives" type="Label" parent="TextureRect2" unique_id=257382571]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.404846
offset_top = -33.52381
offset_right = 58.595154
offset_bottom = 8.476189
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0098039, 1.4444444)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Lives:  3"
horizontal_alignment = 1
